# Hash

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  REQUIREMENTS.md  TESTING.md
.github/workflows/: ci.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  sync.rs
dev/: README.md
dev/vault/: Getting Started.md  Getting-Started.md  Welcome.md
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: api.md  architecture.md
e2e/: fixtures.js  package-lock.json  package.json  playwright.config.js
e2e/tests/: auth.spec.js  editor.spec.js  files.spec.js  new_features.spec.js  search.spec.js  settings.spec.js
server/: Cargo.toml  config.example.toml
server/src/: config.rs  lib.rs  main.rs  migrations.rs  okf.rs  search_index.rs  sync.rs  vault.rs
server/src/routes/: assets.rs  auth.rs  files.rs  mcp.rs  mod.rs  search.rs  sync.rs  ui.rs
server/tests/: api.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  main.js
ui/src/lib/: api.js  frontmatter.js  markdown.js  theme.js
ui/src/lib/components/: AssetViewer.svelte  ConflictPanel.svelte  Editor.svelte  FileTree.svelte  LoginForm.svelte  NewItemModal.svelte  SearchBar.svelte  SettingsPanel.svelte  Viewer.svelte
ui/src/stores/: vault.js
vault/: Getting-Started.md  Welcome.md
