[package]
name = "hash-server"
version = "0.1.0"
edition = "2021"
description = "#ash server — self-hosted markdown knowledge base"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Filesystem
walkdir = "2"

# Checksums (for sync delta detection)
sha2 = "0.10"
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
