[workspace]

[package]
name = "hash-desktop"
version = "0.0.7"
edition = "2021"
description = "#ash desktop client — offline-first markdown sync"

[lib]
name = "hash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for talking to the #ash server
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Filesystem
walkdir = "2"
sha2 = "0.10"
hex = "0.4"

# Encoding
base64 = "0.22"
urlencoding = "2"

# Config
toml = "0.8"
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
